--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ https://templatemo.com/tm-518-sentra
             </nav>
             <ul class="social-icons">
                 <li><a href="https://www.facebook.com/martine.ais"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://twitter.com/pinkmartine35"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="#"><i class="fa fa-rss"></i></a></li>
                 <li><a href="#"><i class="fa fa-behance"></i></a></li>
